Fix nav not showing

--- a/app/assets/stylesheets/main-nav.scss
+++ b/app/assets/stylesheets/main-nav.scss
@@ -2,6 +2,7 @@
     width: calc(100%);
     position: absolute;
     padding: 2.0rem 1.5rem;
+    z-index: 10;
 
     .nav-link {
 	line-height: 40px;
